--- a/ITBI/ITBI/frontend/assets/css/style.css
+++ b/ITBI/ITBI/frontend/assets/css/style.css
@@ -31,6 +31,10 @@ p {
   margin: 0 0 30px 0;
 }
 
+.center {
+  text-align: center;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
   font-weight: 400;
