--- a/ITBI/ITBI/frontend/assets/css/style.css
+++ b/ITBI/ITBI/frontend/assets/css/style.css
@@ -151,7 +151,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 #header #logo h1 span {
-  color: #f822dc;
+  color: #f87800;
 }
 #header #logo h1 a, #header #logo h1 a:hover {
   color: #fff;
@@ -172,11 +172,11 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 .buy-tickets {
   color: #fff;
-  background: #f822dc;
+  background: #f87800;
   padding: 7px 22px;
   margin: 0 0 0 15px;
   border-radius: 50px;
-  border: 2px solid #f822dc;
+  border: 2px solid #f87800;
   transition: all ease-in-out 0.3s;
   font-weight: 500;
   line-height: 1;
@@ -282,7 +282,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #f82249;
+  color: #f87800;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -370,7 +370,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #060c22;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #f82249;
+  color: #f87800;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -396,7 +396,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #f82249;
+  color: #f87800;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -474,7 +474,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#f82249 50%, rgba(101, 111, 150, 0.15) 52%);
+  background: radial-gradient(#f87800 50%, rgba(101, 111, 150, 0.15) 52%);
   border-radius: 50%;
   display: block;
   position: relative;
@@ -517,7 +517,7 @@ h1, h2, h3, h4, h5, h6 {
   background: rgba(198, 16, 0, 0);
 }
 #hero .play-btn:hover::after {
-  border-left: 15px solid #f82249;
+  border-left: 15px solid #f87800;
   transform: scale(20);
 }
 #hero .play-btn:hover::before {
@@ -551,10 +551,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  border: 2px solid #f82249;
+  border: 2px solid #f87800;
 }
 #hero .about-btn:hover {
-  background: #f82249;
+  background: #f87800;
   color: #fff;
 }
 
@@ -588,7 +588,7 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden;
   position: relative;
   color: #fff;
-  padding: 60px 0 40px 0;
+  padding: 90px 0 80px 0;
 }
 @media (min-width: 1024px) {
   #about {
@@ -597,8 +597,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 #about:before {
   content: "";
-  background: rgba(13, 20, 41, 0.8);
-  position: absolute;
+  background: rgba(118, 123, 139, 0.8);
+  position: relative;
   bottom: 0;
   top: 0;
   left: 0;
@@ -667,7 +667,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 #speakers .speaker .details a:hover {
-  color: #f82249;
+  color: #f87800;
 }
 #speakers .speaker:hover .details {
   bottom: 0;
@@ -699,7 +699,7 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
 }
 #speakers-details .details .social a:hover {
-  background: #f82249;
+  background: #f87800;
   color: #fff;
 }
 #speakers-details .details .social a i {
@@ -753,7 +753,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 #schedule .nav-tabs a.active {
-  background-color: #f82249;
+  background-color: #f87800;
   color: #fff;
 }
 #schedule .sub-heading {
@@ -904,7 +904,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #152b79;
 }
 #hotels a:hover {
-  color: #f82249;
+  color: #f87800;
 }
 #hotels .stars {
   padding: 0 20px;
@@ -937,10 +937,10 @@ h1, h2, h3, h4, h5, h6 {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #f82249;
+  border: 1px solid #f87800;
 }
 #gallery .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #f82249;
+  background-color: #f87800;
 }
 #gallery .swiper-slide-active {
   text-align: center;
@@ -950,7 +950,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 40px 0;
   }
   #gallery .swiper-slide-active {
-    border: 5px solid #f82249;
+    border: 5px solid #f87800;
     padding: 4px;
     background: #fff;
     z-index: 1;
@@ -1006,7 +1006,7 @@ h1, h2, h3, h4, h5, h6 {
 #faq .faq-list .question {
   display: block;
   position: relative;
-  font-family: #f82249;
+  font-family: #f87800;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
@@ -1032,7 +1032,7 @@ h1, h2, h3, h4, h5, h6 {
   color: black;
 }
 #faq .faq-list .collapsed:hover {
-  color: #f82249;
+  color: #f87800;
 }
 #faq .faq-list .collapsed .icon-show {
   display: inline-block;
@@ -1089,7 +1089,7 @@ h1, h2, h3, h4, h5, h6 {
   border: 0;
   padding: 9px 25px;
   cursor: pointer;
-  background: #f82249;
+  background: #f87800;
   color: #fff;
   transition: all 0.3s ease;
   outline: none;
@@ -1144,7 +1144,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   padding: 10px 40px;
   transition: all 0.2s;
-  background-color: #f82249;
+  background-color: #f87800;
   border: 0;
   color: #fff;
 }
@@ -1159,7 +1159,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 50px;
   padding: 10px 40px;
   transition: all 0.2s;
-  background-color: #f82249;
+  background-color: #f87800;
   border: 0;
   color: #fff;
 }
@@ -1212,7 +1212,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #4869df;
 }
 #contact .contact-info a:hover {
-  color: #f82249;
+  color: #f87800;
 }
 #contact .contact-address, #contact .contact-phone, #contact .contact-email {
   margin-bottom: 20px;
@@ -1271,7 +1271,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
 }
 #contact .php-email-form input:focus, #contact .php-email-form textarea:focus {
-  border-color: #f82249;
+  border-color: #f87800;
 }
 #contact .php-email-form input {
   padding: 10px 15px;
@@ -1280,7 +1280,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 12px 15px;
 }
 #contact .php-email-form button[type=submit] {
-  background: #f82249;
+  background: #f87800;
   border: 0;
   padding: 10px 40px;
   color: #fff;
@@ -1363,7 +1363,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 16px;
 }
 #footer .footer-top .social-links a:hover {
-  background: #f82249;
+  background: #f87800;
   color: #fff;
 }
 #footer .footer-top h4 {
@@ -1373,7 +1373,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   position: relative;
   padding-bottom: 12px;
-  border-bottom: 2px solid #f82249;
+  border-bottom: 2px solid #f87800;
 }
 #footer .footer-top .footer-links {
   margin-bottom: 30px;
@@ -1385,7 +1385,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #footer .footer-top .footer-links ul i {
   padding-right: 5px;
-  color: #f82249;
+  color: #f87800;
   font-size: 18px;
 }
 #footer .footer-top .footer-links ul li {
@@ -1399,7 +1399,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #eee;
 }
 #footer .footer-top .footer-links ul a:hover {
-  color: #f82249;
+  color: #f87800;
 }
 #footer .footer-top .footer-contact {
   margin-bottom: 30px;
@@ -1416,7 +1416,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 65%;
 }
 #footer .footer-top .footer-newsletter input[type=submit] {
-  background: #f82249;
+  background: #f87800;
   border: 0;
   width: 35%;
   padding: 6px 0;
