--- a/ITBI/ITBI/css/main.css
+++ b/ITBI/ITBI/css/main.css
@@ -476,14 +476,14 @@ h1, h2, h3, h4, h5 {
   font-family: 'Montserrat', sans-serif;
   font-size: 40px;
   font-weight: 700;
-  color: rgb(134, 109, 109);
+  color: #fff;
 }
 
 h6 {
   font-family: 'Montserrat', sans-serif;
   font-size: 15px;
   font-weight: 700;
-  color: rgb(134, 109, 109);
+  color: #fff;
 }
 
 ul {
@@ -1617,7 +1617,7 @@ button:focus {
   border-radius: 4px;
   border: 1px solid #d61111;
   margin: 15px 0;
-  webkit-transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
@@ -1914,7 +1914,7 @@ button:focus {
   left: auto;
   top: auto;  
   bottom: auto;
-  width: 485px;
+  width: 100%;
   height: auto;
   padding: auto;
   box-sizing: border-box;
@@ -1931,13 +1931,14 @@ button:focus {
 }
 
 .single-team .team-details {
-  padding: 20px;
+  padding: 50px;
   width: 100%;
   text-align: auto;
   -webkit-transition: 0.5s;
   -moz-transition: 0.5s;
   transition: 0.5s;
   background: transparent;
+  border: 1px;
 }
 
 .single-team .team-details .team-title {
@@ -2638,7 +2639,6 @@ textarea {
 .subscribe-form .form-wrapper {
   background-color: transparent;
   padding: 58px 40px;
-
   border-radius: 40px;
   box-shadow: 0 0 80px rgba(97, 30, 184, 0.2);
   
@@ -2932,3 +2932,205 @@ footer .menu li a:hover {
   font-size: 18px;
   margin-bottom: 0;
 }
+
+.calc {
+  padding: 1em;
+  box-shadow: 6px 6px 20px gray, -6px -6px 20px white;
+  background-color: transparent;
+  border-radius: 20px;
+}
+
+@media (min-width: 500px) {
+  .calc {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 500px;
+    width: 100%;
+    padding: 1em;
+  }
+}
+
+.calc h1 {
+  text-align: center;
+  font-size: 2em;
+  text-decoration: underline;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 0.3em;
+  border-radius: 20px;
+}
+
+.form label,
+.form button {
+  margin-top: 1em;
+}
+.form ::-webkit-input-placeholder{
+  text-align: center;
+  align-items: center;
+}
+
+.form select option{
+  align-items: center;
+  text-align: center;
+}
+.form input select option{
+  border-bottom: 0.5px;
+}
+.form input,
+.form button,
+.form select {
+  font-size: inherit;
+  font-family: inherit;
+  width: 100%;
+  padding: 0.5em;
+  align-items: center;
+  border: 1px solid
+}
+
+.form button {
+  background-color: #E0004D;
+  cursor: pointer;
+  border-radius: 22px;
+  width: 50%;
+}
+
+.form button:hover {
+  filter: opacity(0.7);
+}
+
+.form button:active {
+  background-color: transparent;
+  color: #000;
+  filter: opacity(0.8);
+}
+
+.result {
+  display: flex;
+  justify-content: space-between;
+}
+
+.result label {
+  margin: 1rem;
+}
+
+.alert {
+  display: block;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  font-size: 1.2rem;
+  font-style: italic;
+  position: fixed;
+  box-shadow: 0 0 4px #333;
+  background-color: #ef5350;
+  color: #fff;
+}
+
+@media screen and (max-width: 500px) {
+  .alert {
+    bottom: 0;
+    background-color:#ef5350;
+  }
+}
+
+/* ==========================================================================
+  19. Subscribe Calc
+  ========================================================================== */
+  #subscribe1 {
+    background: transparent;
+    position: relative;
+  }
+  
+  
+  .subscribe1-form .sub-title {
+    margin-bottom: 30px;
+  }
+  
+  .subscribe1-form .sub-title h3 {
+    font-size: 30px;
+    margin-bottom: 10px;
+    position: relative;
+    font-weight: 500;
+  }
+  
+  .subscribe1-form .form-wrapper {
+    background-color: transparent;
+    padding: 58px 40px;
+    border-radius: 40px;
+    box-shadow: 0 0 80px rgba(97, 30, 184, 0.2);
+    
+  }
+  
+  .subscribe1-form .form-wrapper .form-group {
+    margin-bottom: 0px;
+  }
+  
+  .subscribe1-form .form-wrapper .form-control {
+    display: block;
+    width: 100%;
+    font-size: 14px;
+    box-shadow: none;
+    color: #848484;
+    text-transform: capitalize;
+    background: transparent;
+    border: 1px solid #263238;
+    padding: 15px 30px;
+    border-radius: 30px;
+    background-image: none;
+    background-clip: padding-box;
+  }
+  
+  .subscribe1-form .form-wrapper .form-control:focus {
+    color: transparent;
+    background-color: transparent;
+    border-color: #E0004D;
+    box-shadow: none;
+    outline: 0;
+  }
+  
+  .subscribe1-form .form-submit .btn {
+    width: 100%;
+    padding: 13px 30px;
+  }
+  
+  #subscribe1 .sub-item-box {
+    padding: 30px;
+    margin-bottom: 30px;
+    border-radius: 40px;
+    background: transparent;
+    box-shadow: 0 0 80px #263238;
+  }
+  
+  #subscribe1 .sub-item-box .icon-box {
+    float: left;
+  }
+  
+  #subscribe1 .sub-item-box .icon-box i {
+    font-size: 30px;
+    color: #E0004D;
+  }
+  
+  #subscribe1 .sub-item-box .text-box {
+    margin-left: 60px;
+  }
+  
+  #subscribe1 .sub-item-box .text-box h4 {
+    font-size: 16px;
+    font-weight: 500;
+  }
+  
+  #subscribe1 .sub-item-box .text-box p {
+    margin-bottom: 0;
+  }
+  
+  #subscribe1 .sub-item-box:last-child {
+    margin-bottom: 0;
+  }
+  
